[build-system]
requires = [
    "setuptools==70.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "asdirect_custom_bot"
version = "0.0.1"
authors = [
    {name = "Mel", email = "a.mellifluous.one@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "behave==1.2.6",
    "discord==2.3.2",
    "coverage==7.5.3"
]

[project.scripts]
asdirect_bot = "asdirect_bot.generic_client.runner:main"

[tool.setuptools.packages.find]
where = ["src/main"]